Commit version 1.0.1 of browser-blocker.

--- a/dialog-zhCN.html
+++ b/dialog-zhCN.html
@@ -1,9 +1,9 @@
 <div id="bb-container" class="zh-cn">
     <div class="bb-modal">
         <div class="bb-header">
-            <h1>您的浏览器版本太低</h1>
-            <p>为了保证页面的显示效果和安全性，
-                <br><strong>请升级到最新的浏览器版本</strong>
+            <h1>您的浏览器需要更新</h1>
+            <p>为了保证页面的正常显示并保护您的个人信息，
+                <br><strong>请使用以下新版浏览器</strong>
             </p>
         </div>
         <ul class="bb-browsers">
