--- a/dialog.html
+++ b/dialog.html
@@ -2,8 +2,8 @@
     <div class="bb-modal">
         <div class="bb-header">
             <h1>You are using an outdated browser.</h1>
-            <p>In order to ensure the display of the page and the security of your infomation,
-                <br><strong>please update your browser.</strong>
+            <p>To display the website correctly and protect your information,
+                <br><strong>please use one of these up-to-date, free and excellent browsers.</strong>
             </p>
         </div>
         <ul class="bb-browsers">
