--- a/dialog.html
+++ b/dialog.html
@@ -1,51 +1,51 @@
-<div id="bb-container">
-    <div class="bb-modal">
-        <div class="bb-header">
+<div id="ib-container">
+    <div class="ib-modal">
+        <div class="ib-header">
             <h1>You are using an outdated browser.</h1>
             <p>To display the website correctly and protect your information,
                 <br><strong>please use one of these up-to-date, free and excellent browsers.</strong>
             </p>
         </div>
-        <ul class="bb-browsers">
+        <ul class="ib-browsers">
             <li>
                 <a href="http://www.google.com/chrome/browser/desktop/index.html">
-                    <i class="bb-browser-icon bb-ua-chrome"></i>
-                    <div class="bb-browser-name">Chrome</div>
-                    <div class="bb-browser-description">A fast new browser from Google.</div>
+                    <i class="ib-browser-icon ib-ua-chrome"></i>
+                    <div class="ib-browser-name">Chrome</div>
+                    <div class="ib-browser-description">A fast new browser from Google.</div>
                 </a>
             </li>
             <li>
                 <a href="http://www.firefox.com">
-                    <i class="bb-browser-icon bb-ua-firefox"></i>
-                    <div class="bb-browser-name">Firefox</div>
-                    <div class="bb-browser-description">Your online security is Firefox's top priority</div>
+                    <i class="ib-browser-icon ib-ua-firefox"></i>
+                    <div class="ib-browser-name">Firefox</div>
+                    <div class="ib-browser-description">Your online security is Firefox's top priority</div>
                 </a>
             </li>
             <li>
                 <a href="https://www.apple.com/safari">
-                    <i class="bb-browser-icon bb-ua-safari"></i>
-                    <div class="bb-browser-name">Safari</div>
-                    <div class="bb-browser-description">Safari for Mac from Apple, the world's most innovative browser.</div>
+                    <i class="ib-browser-icon ib-ua-safari"></i>
+                    <div class="ib-browser-name">Safari</div>
+                    <div class="ib-browser-description">Safari for Mac from Apple, the world's most innovative browser.</div>
                 </a>
             </li>
             <li>
                 <a href="http://www.opera.com">
-                    <i class="bb-browser-icon bb-ua-opera"></i>
-                    <div class="bb-browser-name">Opera</div>
-                    <div class="bb-browser-description">The fastest browser on Earth.</div>
+                    <i class="ib-browser-icon ib-ua-opera"></i>
+                    <div class="ib-browser-name">Opera</div>
+                    <div class="ib-browser-description">The fastest browser on Earth.</div>
                 </a>
             </li>
             <li>
                 <a href="http://windows.microsoft.com/en-US/internet-explorer/download-ie">
-                    <i class="bb-browser-icon bb-ua-ie11"></i>
-                    <div class="bb-browser-name">IE 11</div>
-                    <div class="bb-browser-description">Designed to help you take control of your privacy. Free from Microsoft.</div>
+                    <i class="ib-browser-icon ib-ua-ie11"></i>
+                    <div class="ib-browser-name">IE 11</div>
+                    <div class="ib-browser-description">Designed to help you take control of your privacy. Free from Microsoft.</div>
                 </a>
             </li>
         </ul>
-        <div class="bb-footer">
-            <a class="bb-try" href="http://www.google.com/chrome/browser/desktop/index.html">Try Chrome now!</a>
+        <div class="ib-footer">
+            <a class="ib-try" href="http://www.google.com/chrome/browser/desktop/index.html">Try Chrome now!</a>
         </div>
     </div>
-    <div class="bb-mask"></div>
+    <div class="ib-mask"></div>
 </div>
