--- a/demos/demo.zhCN.html
+++ b/demos/demo.zhCN.html
@@ -11,7 +11,7 @@
     
     <!--[if lte IE 9]>
     <link rel="stylesheet" href="../ie-blocker/ie-blocker.css">
-    <script src="../ie-blocker/ie-blocker.zhCN.js"></script>
+    <script src="../ie-blocker/ie-blocker.zhcn.js"></script>
     <![endif]-->
 </head>
 <body>
